--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,24 @@ textarea {
     --BGCOLOR-FADE: rgb(252, 220, 160);
     --BGCOLOR: rgb(8, 54, 38);
     --BGIMAGE: linear-gradient(to bottom, var(--BGCOLOR), var(--BGCOLOR-FADE));
-    --BODY-BGCOLOR: #FFF;
-    --BORDER-COLOR: #333;
-    --FONT-COLOR: #000;
+    --BODY-BGCOLOR: #333;
+    --BORDER-COLOR: #0e0d0d;
+    --FONT-COLOR: whitesmoke;
     --HEADER-BGCOLOR: #000;
-    --HEADER-COLOR: #FFF;
+    --HEADER-COLOR: rgb(13, 86, 61);
     --HERO-BGCOLOR: rgba(12, 42, 12, 0.732);
-    --HERO-COLOR: #f3f3f3d6;
+    --HERO-COLOR: #c46a1c;
     --HIGHLIGHT-COLOR: rgb(51,178,51);
     --LINK-ACTIVE: orange;
-    --LINK-COLOR: #000;
-    --LINK-HOVER: gray; /*hsla(0,0%,0%,0.6)*/
+    --LINK-COLOR: rgb(57, 145, 71);
+    --LINK-HOVER: rgb(147, 134, 78); /*hsla(0,0%,0%,0.6)*/
     --NAV-BGCOLOR: #FFF;
+    --primary-light-hsl: 200, 100%, 91%;
+    --primary-hsl: rgb(8, 54, 38);
+    --primary-dark-hsl: 200, 100%, 6%;
+    --primary-dark-hsl: rgb(6, 42, 29);
+    --success-hsl: 100, 60%, 50%;
+    --error-hsl: 0, 60%, 50%;
 
     /* BORDERS */
     --BORDERS: 1px solid var(--BORDER-COLOR);
@@ -68,9 +74,14 @@ textarea {
         --HERO-COLOR: #c46a1c;
         --HIGHLIGHT-COLOR: rgb(15, 131, 42);
         --LINK-ACTIVE: rgb(252, 200, 103);
-        --LINK-COLOR: whitesmoke;
-        --LINK-HOVER: orange;
+        --LINK-COLOR: rgb(57, 145, 71);
+        --LINK-HOVER: rgb(168, 138, 82);
         --NAV-BGCOLOR: rgb(20, 20, 20);
+        --primary-light-hsl: 200, 100%, 91%;
+        --primary-hsl: 200, 100%, 50%;
+        --primary-dark-hsl: 200, 100%, 6%;
+        --success-hsl: 100, 60%, 50%;
+        --error-hsl: 0, 60%, 50%;
     }
 }
 /* || UTILITY CLASSES */
@@ -314,6 +325,10 @@ a:focus-visible {
 a:active {
     color: var(--LINK-ACTIVE);
 }
+/* a.extra{
+    color: #101b12;
+    text-shadow: #9f7979;
+} */
 
 /* || HEADER */
 
@@ -343,7 +358,15 @@ a:active {
     display: flex;
     justify-content: space-evenly;
     gap: 1rem;
-}/**/
+}
+.extra_ul {
+    padding: var(--PADDING-TOP_BOT);
+    list-style-type: none;
+    color: #716c6c;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
 
 /* || HERO */
 
@@ -503,10 +526,15 @@ animation: showWelcome 1s ease-in-out 1s forwards;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
 }
-
-
-
-
+.info_card {
+    border: 1px solid;
+    width: 85%;
+    display: flex;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 7px;
+    gap: 30px;
+}
 
 /* || MEMBERS */
 
@@ -586,7 +614,7 @@ color: var(--LINK-HOVER);
     text-align: center;
 }
   
-    /* Add Taco emoji to H1 Heading...cool!*/
+    /* Add hunter icons to H1 Heading...cool!*/
     @media screen and (min-width: 576px) {
         .header__h1::before {
             content: '🦌 ';
@@ -602,3 +630,119 @@ color: var(--LINK-HOVER);
             font-size: 125%;
         }
     } 
+
+
+    /* login styles */
+
+    .full-screen-container {
+        background-image: url("../img/RHC_Land_overview_356x238.png");
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .login-container {
+        --color: hsl(var(--primary-dark-hsl), .9);
+        color: rgba(115, 174, 115, 0.887);
+        background-color: var(--color);
+        background-color: rgba(12,20,12,0.6);
+        box-shadow: 0 0 15px 0 var(--color);
+        padding: 40px 30px;
+        width: 60%;
+        padding-left: 6%;
+        padding-right: 6%;
+        /* height: 300px; */
+        max-width: 600px;
+        border-radius: 20px;
+      }
+      
+      .login-title {
+        margin: 0;
+        color: rgb(53, 164, 101);
+        text-align: center;
+        font-size: 2rem;
+        font-weight: normal;
+      }
+      
+      .form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 40px;
+      }
+
+        .g-day {
+            text-align: center;
+        }
+
+      .pswrd {
+        display: flex;
+        flex-direction: column;
+        gap: 7px;
+      }
+      
+      .pswrd label {
+        color: whitesmoke;
+        font-weight: lighter;
+      }
+      
+      .pswrd input {
+        font-size: 1.25rem;
+        padding: .5em;
+        background-color: hsl(var(--primary-light-hsl), .3);
+        border: none;
+        outline: none;
+        border-radius: .25em;
+        color: white;
+        font-weight: lighter;
+      }
+      
+      .pswrd.success input {
+        box-shadow: 0 0 0 1px hsl(var(--success-hsl));
+      }
+      
+      .pswrd.error input {
+        box-shadow: 0 0 0 1px hsl(var(--error-hsl));
+      }
+      
+      .pswrd input:focus {
+        box-shadow: 0 0 0 1px hsl(var(--primary-hsl));
+      }
+      
+      .pswrd .msg {
+        display: none;
+        font-size: .75rem;
+      }
+      
+      .input-group.success .msg,
+      .input-group.error .msg {
+        display: block;
+      }
+      
+      .pswrd.error .msg {
+        color: hsl(var(--error-hsl));
+      }
+      
+      .input-group.success .msg {
+        color: hsl(var(--success-hsl));
+      }
+      
+      .submit_button {
+        padding: .5em 1em;
+        font-size: 1.5rem;
+        font-weight: lighter;
+        color: white;
+        background-color: rgba(17, 97, 69, 0.5);
+        border: 1px solid hsl(var(--primary-hsl));
+        border-radius: .25em;
+        outline: none;
+        cursor: pointer;
+      }
+      
+      .submit_button:hover,
+      .submit_button:focus {
+        background-color: hsl(var(--primary-hsl), .4);
+      }
